<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_from_mqtt"
        android:layout_margin="8dp"
        android:id="@+id/heading"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="#212121"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text=""
        android:id="@+id/datafromcloud"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnconnet"
        android:text="@string/connect"
        app:layout_constraintTop_toBottomOf="@id/datafromcloud"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subscribe"
        android:text="@string/subcribe_to_topic"
        app:layout_constraintTop_toBottomOf="@id/btnconnet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unsubscribe"
        android:text="@string/unsubcribe_to_topic"
        app:layout_constraintTop_toBottomOf="@id/subscribe"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDisconnect"
        android:text="@string/disconnect"
        app:layout_constraintTop_toBottomOf="@id/unsubscribe"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edittextdata"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnDisconnect"
        app:layout_constraintRight_toLeftOf="@id/publish"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/enter_data_to_publish"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/publish"
        android:text="@string/publish"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnDisconnect"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/edittextdata"/>

</android.support.constraint.ConstraintLayout>